--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rhoades-backend",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "main": "src/index.ts",
   "description": "Backend for the application to automatize the registration of lists",
   "scripts": {
@@ -8,7 +8,8 @@
     "build": "webpack --mode production",
     "lint": "eslint src/* --ext .ts",
     "service": "nodemon",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "test": "ts-node src/test/index"
   },
   "author": "AnthonyLzq <sluzquinosa@uni.pe>",
   "license": "MIT",
@@ -16,12 +17,15 @@
     "@google-cloud/firestore": "^4.4.0",
     "express": "^4.17.1",
     "firebase-admin": "^9.3.0",
-    "morgan": "^1.10.0"
+    "generate-password": "^1.5.1",
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.4.14"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.14.2",
+    "@types/nodemailer": "^6.4.0",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
     "dotenv": "^8.2.0",
