--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rhoades-backend",
-  "version": "0.8.0",
+  "version": "0.9.0",
   "main": "src/index.ts",
   "description": "Backend for the application to automatize the registration of lists",
   "scripts": {
@@ -19,13 +19,15 @@
     "firebase-admin": "^9.3.0",
     "generate-password": "^1.5.1",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.4.14"
+    "nodemailer": "^6.4.14",
+    "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.14.2",
     "@types/nodemailer": "^6.4.0",
+    "@types/swagger-ui-express": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
     "dotenv": "^8.2.0",
