--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rhoades-backend",
-  "version": "0.10.0",
+  "version": "0.11.0",
   "main": "src/index.ts",
   "description": "Backend for the application to automatize the registration of lists",
   "scripts": {
@@ -18,12 +18,14 @@
     "express": "^4.17.1",
     "firebase-admin": "^9.3.0",
     "generate-password": "^1.5.1",
+    "http-errors": "^1.8.0",
     "morgan": "^1.10.0",
     "nodemailer": "^6.4.14",
     "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
+    "@types/http-errors": "^1.8.0",
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.14.2",
     "@types/nodemailer": "^6.4.0",
