--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rhoades-backend",
-  "version": "0.14.0",
+  "version": "0.15.0",
   "main": "src/index.ts",
   "description": "Backend for the application to automatize the registration of lists",
   "scripts": {
@@ -19,6 +19,7 @@
     "firebase-admin": "^9.3.0",
     "generate-password": "^1.5.1",
     "http-errors": "^1.8.0",
+    "joi": "^17.3.0",
     "morgan": "^1.10.0",
     "nodemailer": "^6.4.14",
     "swagger-ui-express": "^4.1.4"
