--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rhoades-backend",
-  "version": "0.55.1",
+  "version": "0.56.0",
   "main": "src/index.ts",
   "description": "Backend for the application to automatize the registration of lists",
   "scripts": {
@@ -15,11 +15,13 @@
   "dependencies": {
     "@google-cloud/firestore": "^4.4.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "firebase-admin": "^9.3.0",
     "generate-password": "^1.5.1",
     "http-errors": "^1.8.0",
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.11.11",
     "morgan": "^1.10.0",
     "nodemailer": "^6.4.14",
     "redis": "^3.0.2",
@@ -27,6 +29,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
+    "@types/express-fileupload": "^1.1.6",
     "@types/http-errors": "^1.8.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/morgan": "^1.9.1",
