--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rhoades-backend",
-  "version": "0.72.0",
+  "version": "0.73.0",
   "main": "src/index.ts",
   "description": "Backend for the application to automatize the registration of lists",
   "scripts": {
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "@google-cloud/firestore": "^4.8.1",
+    "adm-zip": "^0.5.2",
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
@@ -29,6 +30,7 @@
     "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
+    "@types/adm-zip": "^0.4.33",
     "@types/express": "^4.17.11",
     "@types/express-fileupload": "^1.1.6",
     "@types/http-errors": "^1.8.0",
